Archive2/5a/11dbb5e03402cf/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘std::string from_int(int)’:
main.cpp:9:14: error: aggregate ‘std::stringstream ss’ has incomplete type and cannot be defined
 stringstream ss;
              ^
main.cpp:12:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
